<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">اسلامي</string>
    <string name="changeLanguage">تغيير اللغة</string>

    <string name="navigation_drawer_open" translatable="false">فتح</string>
    <string name="navigation_drawer_close" translatable="false">اغلاق</string>
    <string name="title_activity_tasabyh">TasabyhActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="searchSurah">ابحث عن سوره</string>
    <string name="closeProject">اغلاق التطبيق</string>
    <string name="closeDialogDes">هل انت متاكد انك تريد اغلاق التطبيق ؟</string>
    <string name="yes">نعم</string>
    <string name="No">لا</string>
    <string name="arabic">العربية</string>
    <string name="english">الانجليزية</string>
    <string name="ok">مفهوم</string>
    <string name="aboutDialogDes">هذا تطبيق اسلامي يحتوي علي كل ما يحتاج اي مسلم في حياته اليومية</string>
    <string name="aboutDialog">عن التطبيق</string>
    <string name="qraanTitle">القران</string>
    <string name="qraan1">الفاتحة</string>
    <string name="qraan2">البقرة</string>
    <string name="qraan3">آل عمران</string>
    <string name="qraan4">النساء</string>
    <string name="qraan5">المائدة</string>
    <string name="qraan6">الأنعام</string>
    <string name="qraan7">الأعراف</string>
    <string name="qraan8">الأنفال</string>
    <string name="qraan9">التوبة</string>
    <string name="qraan10">يونس</string>
    <string name="qraan11">هود</string>
    <string name="qraan12">يوسف</string>
    <string name="qraan13">الرعد</string>
    <string name="qraan14">ابراهيم</string>
    <string name="qraan15">الحجر</string>
    <string name="qraan16">النحل</string>
    <string name="qraan17">الاسراء</string>
    <string name="qraan18">الكهف</string>
    <string name="qraan19">مريم</string>
    <string name="qraan20">طه</string>
    <string name="qraan21">الأنبياء</string>
    <string name="qraan22">الحج</string>
    <string name="qraan23">المؤمنون</string>
    <string name="qraan24">النور</string>
    <string name="qraan25">الفرقان</string>
    <string name="qraan26">الشعراء</string>
    <string name="qraan27">النمل</string>
    <string name="qraan28">القصص</string>
    <string name="qraan29">العنكبوت</string>
    <string name="qraan30">الروم</string>
    <string name="qraan31">لقمان</string>
    <string name="qraan32">السجدة</string>
    <string name="qraan33">الأحزاب</string>
    <string name="qraan34">سبأ</string>
    <string name="qraan35">فاطر</string>
    <string name="qraan36">يس</string>
    <string name="qraan37">الصافات</string>
    <string name="qraan38">ص</string>
    <string name="qraan39">الزمر</string>
    <string name="qraan40">غافر</string>
    <string name="qraan41">فصلت</string>
    <string name="qraan42">الشورى</string>
    <string name="qraan43">الزخرف</string>
    <string name="qraan44">الدخان</string>
    <string name="qraan45">الجاثية</string>
    <string name="qraan46">الأحقاف</string>
    <string name="qraan47">محمد</string>
    <string name="qraan48">الفتح</string>
    <string name="qraan49">الحجرات</string>
    <string name="qraan50">ق</string>
    <string name="qraan51">الذاريات</string>
    <string name="qraan52">الطور</string>
    <string name="qraan53">النجم</string>
    <string name="qraan54">القمر</string>
    <string name="qraan55">الرحمن</string>
    <string name="qraan56">الواقعة</string>
    <string name="qraan57">الحديد</string>
    <string name="qraan58">المجادلة</string>
    <string name="qraan59">الحشر</string>
    <string name="qraan60">الممتحنة</string>
    <string name="qraan61">الصف</string>
    <string name="qraan62">الجمعة</string>
    <string name="qraan63">المنافقون</string>
    <string name="qraan64">التغابن</string>
    <string name="qraan65">الطلاق</string>
    <string name="qraan66">التحريم</string>
    <string name="qraan67">الملك</string>
    <string name="qraan68">القلم</string>
    <string name="qraan69">الحاقة</string>
    <string name="qraan70">المعارج</string>
    <string name="qraan71">نوح</string>
    <string name="qraan72">الجن</string>
    <string name="qraan73">المزمل</string>
    <string name="qraan74">المدثر</string>
    <string name="qraan75">القيامة</string>
    <string name="qraan76">الانسان</string>
    <string name="qraan77">المرسلات</string>
    <string name="qraan78">النبأ</string>
    <string name="qraan79">النازعات</string>
    <string name="qraan80">عبس</string>
    <string name="qraan81">التكوير</string>
    <string name="qraan82">الانفطار</string>
    <string name="qraan83">المطففين</string>
    <string name="qraan84">الانشقاق</string>
    <string name="qraan85">البروج</string>
    <string name="qraan86">الطارق</string>
    <string name="qraan87">الاعلى</string>
    <string name="qraan88">الغاشية</string>
    <string name="qraan89">الفجر</string>
    <string name="qraan90">البلد</string>
    <string name="qraan91">الشمس</string>
    <string name="qraan92">الليل</string>
    <string name="qraan93">الضحى</string>
    <string name="qraan94">الشرح</string>
    <string name="qraan95">التين</string>
    <string name="qraan96">العلق</string>
    <string name="qraan97">القدر</string>
    <string name="qraan98">البينه</string>
    <string name="qraan99">الزلزلة</string>
    <string name="qraan100">العاديات</string>
    <string name="qraan101">القارعة</string>
    <string name="qraan102">التكاثر</string>
    <string name="qraan103">العصر</string>
    <string name="qraan104">الهمزة</string>
    <string name="qraan105">الفيل</string>
    <string name="qraan106">قريش</string>
    <string name="qraan107">الماعون</string>
    <string name="qraan108">الكوثر</string>
    <string name="qraan109">الكافرون</string>
    <string name="qraan110">النصر</string>
    <string name="qraan111">المسد</string>
    <string name="qraan112">الاخلاص</string>
    <string name="qraan113">الفلق</string>
    <string name="qraan114">الناس</string>
    <string name="tasabyh">تسابيح</string>
    <string name="adaya">ادعية</string>
    <string name="azkarElsabah">اذكار الصباح</string>
    <string name="azkarElmasaa">اذكار المساء</string>
    <string name="malomatDenya">معلومات دينية</string>
    <string name="Setting">الاعدادات</string>
    <string name="NightMode">الوضع الليلي</string>
    <string name="aboutApp">عن التطبيق</string>
    <string name="Share">شارك</string>
    <string name="shareApp">مشاركة</string>
    <string name="rateApp">تقييم التطبيق</string>
    <string name="sebhaTitle">سبحة</string>
    <string name="qiblahTitle">القبله</string>
    <string name="azkarTitle">اذكار</string>
    <string name="stories">قصص اسلامية</string>
    <string name="noteTitle">النوتة التحميدية</string>
    <string name="mainDes">وَأَمَّا بِنِعْمَةِ رَبِّكَ فَحَدِّثْ</string>


    <!-- Strings used for Note Screen -->
    <string name="note_title">النِعَم</string>
    <string name="search_hint">ابحث هنا</string>
    <string name="menu_item_delete">حذف جميع المذكرات</string>
    <string name="note_title_et">العنوان</string>
    <string name="note_description_et">الوصف</string>
    <string name="note_add_edit_tollBar"> ﴿وَأَمَّا بِنِعْمَةِ رَبِّكَ فَحَدِّثْ﴾</string>
    <string name="note_add_btn">أضف نِعَمة</string>
    <string name="note_Edit_btn">تعديل نِعَمة</string>
    <string name="note_snackBar">تم حذف العنصر</string>
    <string name="note_undo">الغاء</string>
    <string name="note_swipe_right">حذف</string>
    <string name="note_swipe_left">تعديل</string>
    <string name="enter_title_of_post">ادخل عنوان القصه</string>
    <string name="enter_description_of_post">ادخل وصف القصة</string>
    <string name="add_post">اضف القصة</string>

    <!-- Strings used for Sebha Screen -->
    <string name="sebha_add_btn">أضغط هنا</string>
    <string name="sebha_reset_btn">إعادة</string>
    <string name="sebha_tollBar">﴿سَبِّحِ اسْمَ رَبِّكَ الْأَعْلَىْ﴾</string>
    <string name="qiblahDes">حرك هاتفك الي ان تصبح الكعبة بالمنتصف</string>


</resources>