<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bakground_color"
    android:layout_height="match_parent"
    tools:context=".Screens.MainScreen.Notes.Components.AddNotesActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addNote_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/note_add_edit_tollBar"
        android:background="@color/purple_500"
        android:padding="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_notes_et_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addNote_toolbar"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/text_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_notes_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/note_title_et"
            android:textColor="@color/text_color"            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_notes_et_title_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_notes_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/note_description_et"
            android:textColor="@color/text_color"            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@null"
        android:background="@drawable/custom_btn_bg"
        android:text="@string/note_add_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/add_notes_btn"
        />
</RelativeLayout>