<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:src="@drawable/ic_baseline_info_24"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/aboutDialog"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/aboutDialogDes"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_style"
            android:elevation="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>



    </LinearLayout>
</LinearLayout>