<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakground_color"
    tools:context=".Screens.MainScreen.Stories.Components.EditStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editPost_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_Color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_baseline_add_24"
        android:scaleType="centerCrop"
        android:id="@+id/editPostImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPost_toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EditNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title_of_post"
        android:backgroundTint="@color/background"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/app_Color"
        android:textColorHint="@color/app_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPostImage"
        app:layout_constraintVertical_bias="0.268" />
    <EditText
        android:id="@+id/EditNoteDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_of_post"
        android:backgroundTint="@color/background"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/app_Color"
        android:textColorHint="@color/app_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditNoteTitle"
        app:layout_constraintVertical_bias="0.268" />
    <Button
        android:id="@+id/editPostBtn"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:text="@string/add_post"
        android:textStyle="bold"
        android:backgroundTint="@color/app_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditNoteDes"
        app:layout_constraintVertical_bias="0.313" />

    <ProgressBar
        android:id="@+id/editProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>