<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakground_color"
    android:orientation="vertical"
    android:adjustViewBounds="true"
    tools:context=".Screens.MainScreen.SebhaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sebhaToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color3"
        android:padding="10dp"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sebha_tollBar"
        app:titleTextColor="@color/text_color" />
   <!-- <ImageView
        android:id="@+id/background_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splashphoto2"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />-->
    <Button
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/sebha_btn"
        android:fontFamily="@font/lalezar"
        android:text="@string/sebha_add_btn"
        android:textColor="@color/background"

        android:textSize="36sp"
        app:backgroundTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sebha_counter" />

    <TextView
        android:id="@+id/sebha_counter"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:layout_weight="3"
        android:background="@color/text_color"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/text_color3"
        android:textSize="35sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sebhaToolbar" />

    <Button
        android:id="@+id/reset"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sebha_btn"
        android:fontFamily="@font/lalezar"
        android:text="@string/sebha_reset_btn"
        android:textColor="@color/text_color3"
        android:textSize="29sp"

        app:backgroundTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.442" />

    <ImageView
        android:id="@+id/sebha_background_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sebhaToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>